listeleme sayfaları eklendi

--- a/AspNetMVCEgitim/Views/Shared/_Layout.cshtml
+++ b/AspNetMVCEgitim/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <link href="~/metronic/assets/css/themes/layout/aside/dark.css" rel="stylesheet" type="text/css" />
     <!--end::Layout Themes-->
     <link rel="shortcut icon" href="~/metronic/assets/media/logos/favicon.ico" />
+    @RenderSection("styles", required: false)
 </head>
 <!--end::Head-->
 <!--begin::Body-->
