--- a/AspNetMVCEgitim/Views/Order/Ekle.cshtml
+++ b/AspNetMVCEgitim/Views/Order/Ekle.cshtml
@@ -3,5 +3,92 @@
     ViewBag.Title = "Ekle";
 }
 
-<h2>Sipariş Formu</h2>
+https://www.mehsatek.com/bootstrap-dersleri/
+
+<div class="row">
+    <div class="col-lg-12">
+
+        <!--begin::Card-->
+        <div class="card card-custom">
+            <div class="card-header card-header-tabs-line">
+                <div class="card-title">
+                    <h3 class="card-label">Card Title</h3>
+                </div>
+                <div class="card-toolbar">
+                    <ul class="nav nav-tabs nav-bold nav-tabs-line">
+                        <li class="nav-item">
+                            <a class="nav-link active" data-toggle="tab" href="#kt_tab_pane_1">Butonlar</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#kt_tab_pane_2">Sekme2</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#kt_tab_pane_3">Sekme3</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#kt_tab_pane_4">Sekme4</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#kt_tab_pane_5">Sekme5</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="tab-content">
+                    <div class="tab-pane fade show active" id="kt_tab_pane_1" role="tabpanel">
+                        <h2>Buton örnekleri</h2>
+                        <button type="button" class="btn btn-primary">Primary</button>
+                        <button type="button" class="btn btn-secondary">Secondary</button>
+                        <button type="button" class="btn btn-success">Success</button>
+                        <button type="button" class="btn btn-danger">Danger</button>
+                        <button type="button" class="btn btn-warning">Warning</button>
+                        <button type="button" class="btn btn-info">Info</button>
+                        <button type="button" class="btn btn-light">Light</button>
+                        <button type="button" class="btn btn-dark">Dark</button>
+                        <button type="button" class="btn btn-link">Link</button>
+
+                        <h2>Buton şeffaf</h2>
+                        <button type="button" class="btn btn-outline-primary">Primary</button>
+                        <button type="button" class="btn btn-outline-secondary">Secondary </button>
+                        <button type="button" class="btn btn-outline-success">Success</button>
+                        <button type="button" class="btn btn-outline-danger">Danger</button>
+                        <button type="button" class="btn btn-outline-warning">Warning</button>
+                        <button type="button" class="btn btn-outline-info">Info</button>
+                        <button type="button" class="btn btn-outline-light">Light</button>
+                        <button type="button" class="btn btn-outline-dark">Dark</button>
+
+                        <h2>Buton yükleniyor</h2>
+                        <button class="btn btn-primary">
+                            <span class="spinner-border spinner-border-sm"></span>
+                            Yükleniyor..
+                        </button>
+
+                        <h2>Buton boyut</h2>
+                        <button type="button" class="btn btn-primary btn-sm">Primary1</button>
+                        <button type="button" class="btn btn-primary btn-lg">Primary2</button>
+                        <button type="button" class="btn btn-primary btn-block">Primary3</button>
+                    </div>
+                    <div class="tab-pane fade" id="kt_tab_pane_2" role="tabpanel">
+
+                    </div>
+                    <div class="tab-pane fade" id="kt_tab_pane_3" role="tabpanel">
+
+                    </div>
+                    <div class="tab-pane fade" id="kt_tab_pane_4" role="tabpanel">
+
+                    </div>
+                    <div class="tab-pane fade" id="kt_tab_pane_5" role="tabpanel">
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!--end::Card-->
+
+    </div>
+</div>
+
+
 
